microk8s/k8s/keptn-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keptn-ingress
  namespace: keptn
  annotations: 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: keptn.INGRESS_PLACEHOLDER
    http:
      paths:
      - backend:
          serviceName: api-gateway-nginx
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
