microk8s/k8s/simplenode-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: simplenodeservice
  name: simplenodeservice
  annotations:
    kubernetes.io/ingress.class: public
  namespace: staging
spec:
  rules:
  - host: simplenode.staging.DOMAIN_PLACEHOLDER
    http:
      paths:
      - backend:
          serviceName: simplenodeservice
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: simplenodeservice
  name: simplenodeservice
  namespace: production
spec:
  rules:
  - host: simplenode.production.DOMAIN_PLACEHOLDER
    http:
      paths:
      - backend:
          serviceName: simplenodeservice
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
